musicvoting/frontend/src/app/pages/host-dashboard/host-dashboard.css
body{
  font-family: var(--font), sans-serif;
  background: linear-gradient(135deg, #8403A6, #F2594B);
}

.layout{
  width: 100vw;
  min-height: 100vh;
  font-family: var(--font), sans-serif;
  background: linear-gradient(135deg, #8403A6, #F2594B);
}

.content-cards{
  display: flex;
  width: 100vw;
}

.left{
  width: 80vw;
  height: auto;
}

.right{
  width: 20vw;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

/* NAVBAR */
.navbar {
  height: 4rem;
  display: flex;
  align-items: center;
  gap: 20px;
  padding: 0 20px;
}

.burger {
  font-size: 2.8rem;
  background: none;
  border: none;
  cursor: pointer;
  color: white;
}

/* Side Menu */
.side-menu {
  position: fixed;
  top: 0;
  left: 0;
  width: 260px;
  height: 100vh;
  background: white;
  transform: translateX(-100%);
  transition: transform 0.3s ease;
  z-index: 1000;
}

.side-menu > h2 {
  margin-left: 1rem;
}

.side-menu.open {
  transform: translateX(0);
}

.side-menu ul {
  list-style: none;
  padding: 0.1em;
}

.side-menu li {
  position: relative;
  padding: 0.6rem 0.7rem 0.6rem 1.5rem;
  margin: 0.5rem 0.5rem 0.5rem 0;
  border-radius: 0 20px 20px 0;
  background-color: rgba(131, 3, 166, 0.1);
  transition: all 0.3s ease-in-out;
  overflow: hidden;
}

.side-menu li::before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  width: 5px;
  background: #8b00a5;
  border-radius: 0 4px 4px 0;
  opacity: 0;
  transform: scaleY(0.5);
  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
}

.side-menu li.active::before {
  opacity: 1;
  transform: scaleY(1);
}

.side-menu li:hover {
  padding: 0.8rem 0.7rem 0.8rem 1.8rem;
  background-color: rgba(131, 3, 166, 0.3);
  font-weight: bold;
}

.side-menu a {
  text-decoration: none;
  font-size: 18px;
  color: black;
}

.side-menu li.active {
  padding: 0.8rem 0.7rem 0.8rem 1.8rem;
  background-color: rgba(131, 3, 166, 0.3);
  font-weight: bold;
}

.overlay {
  position: fixed;
  inset: 0;
  background: rgba(0,0,0,0.3);
  z-index: 999;
}


/* CURRENT SONG */

.current-song{
  display: flex;
  gap: 2rem;
  width: calc(80vw - 4rem);
  box-sizing: border-box;
  padding: 2rem;

  margin: 0 0 2rem 2rem;
  background-color: white;

  border-radius: 30px;
  box-shadow: 0 0 0.9rem 0.9rem rgba(0, 0, 0, 0.1);
}

.song-info{
  padding-left: 2rem;
  flex: 1;
  min-width: 0;
}

.song-info > h1 {
  font-size: 2.5rem;
}
.song-info > p {
  font-size: 1.5rem;
}

.progress {
  margin-top: 2rem;
  width: 100%;
  display: flex;
  align-items: center;
  gap: 15px;
}

.progress-bar {
  flex: 1;
  min-width: 0;
  height: 6px;
  background-color: #eee;
  border-radius: 10px;
}

.progress-fill {
  height: 100%;
  background-color: #F2594B;
  width: 0;
  transition: width 0.5s linear;
  border-radius: 4px 0 0 4px;
}

.player-controls {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 1.56rem;
  margin-top: 2rem;
  width: 100%;
  min-width: 0;
}

.play-icon, .skip-icon {
  font-size: 4.5rem;
  cursor: pointer;
  transition: transform 0.2s ease, color 0.2s ease;
  background: transparent;
  border: none;
  padding: 0;
  line-height: 1;
}

.play-icon:hover {
  transform: scale(1.3);
}

.skip-icon:hover {
  transform: scale(1.2);
}

/* WARTESCHLANGE */

.queue{
  gap: 2rem;
  width: calc(80vw - 4rem);
  height: max-content;
  box-sizing: border-box;
  padding: 2rem 2rem 0 2rem;

  flex-grow: 1;
  overflow: auto;

  margin: 0 0 2rem 2rem;
  background-color: white;

  border-radius: 30px;
  box-shadow: 0 0 0.9rem 0.9rem rgba(0, 0, 0, 0.1);
}

.queue > h2{
  font-size: 2rem;
  margin: 0 0 0 1.5rem;
}

.queue-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-auto-flow: row;
  gap: 1rem;
  margin: 1.5rem;
}

.track {
  display: flex;
  gap: 1rem;
  font-weight: bold;
  font-size: 1.2rem;
  position: relative;
  align-items: center;
  box-shadow: 0 0 0.4rem 0.4rem rgba(0, 0, 0, 0.1);
  margin: 0.75rem;
}

.track-info {
  display: flex;
  gap: 5rem;
  min-height: 3.75rem;
  flex: 1;
  padding-right: 4.5rem;
  box-sizing: border-box;
}

.track-info .info {
  flex: 1;
  min-width: 0;
}

.track-info .delete-icon {
  position: absolute;
  right: 1rem;
  top: 50%;
  transform: translateY(-50%);
  margin: 0;
  cursor: pointer;
  background: transparent;
  border: none;
  padding: 0;
}

.track-info .delete-icon img {
  width: 1.6rem;
  height: auto;
  display: block;
  margin: 1rem;
}

.song-artist,
.song-title {
  margin-bottom: 0.5rem;
}

.song-title {
  margin-top: 0.2rem;
  font-size: 0.9375rem;
}

.song-artist {
  font-size: 0.75rem;
}

.cover-wrapper {
  position: relative;
  width: 5.2rem;
  height: 5.2rem;
  overflow: hidden;
}

.cover-wrapper img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.queue-number {
  position: absolute;
  inset: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 2.5rem;
  font-weight: 900;
  color: rgba(255,255,255,0.85);
  background: rgba(0,0,0,0.4);
}

.queue-text-default {
  margin: 1rem 2rem 3rem 1.5rem;
}

/* RIGHT SIDE */

/* HOST PIN */
.host-pin-box {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1.2rem 1.8rem;
  width: 80%;
  /* Optik des Containers */
  background-color: #efefef;
  border-radius: 20px;
  font-family: 'Segoe UI', Roboto, Arial, sans-serif;
}

.pin-content {
  display: flex;
  flex-direction: column;
}

.party-pin-label {
  margin: 0;
  color: #8e8e8e;
  font-size: 14px;
  font-weight: 500;
  margin-bottom: 4px;
}

.party-pin-value {
  margin: 0;
  color: #000000;
  font-size: 38px;
  font-weight: 800;
  letter-spacing: 20%;
}

.crown-icon {
  margin-left: 20px;
  display: flex;
  align-items: center;
  height: 2vh;
}

/* QR CODE */
.qr-code{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: start;

  width: calc(20vw - 2rem);
  min-height: 76vh;
  box-sizing: border-box;
  padding: 2rem;

  background-color: white;
  position: fixed;

  border-radius: 30px;
  box-shadow: 0 0 0.9rem 0.9rem rgba(0, 0, 0, 0.1);
}

.qr-code > .cover {
  width: 100%;
}

.qr-code-btn {
  text-align: center;
  padding: 0.5rem 1rem;
  color: white;
  background-color: #8303A6;
  font-weight: bold;
  border-radius: 30px;
  border: none;
  height: 2.5rem;
  transition: all 0.3s ease-in-out;
}

.qr-code-btn:hover {
  transform: translateY(-0.2rem) scale(1.01);
  box-shadow: 0 0 0.5rem 1rem rgba(0, 0, 0, 0.01);
  font-weight: 1000;
  background-color: #C826B8;
}


/* BUTTONS */

.options-list {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  width: 100%;
}

.option-btn {
  display: flex;
  align-items: center;
  gap: 1rem;
  width: 100%;
  padding: 1rem 1.5rem;
  border-radius: 20px;
  border: 1px solid rgba(255, 255, 255, 0.3);
  background: rgb(139 0 165 / 0.2);
  cursor: pointer;
  text-align: left;
  transition: background 0.2s;
}

.option-btn-end {
  display: flex;
  align-items: center;
  gap: 1rem;
  width: 100%;
  padding: 1rem 1.5rem;
  border-radius: 20px;
  border: 1px solid rgba(255, 255, 255, 0.3);
  background: rgb(242 89 75 / 0.2);
  cursor: pointer;
  text-align: left;
  transition: background 0.2s;
}

.end-confirm {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 1rem;
  width: 100%;
  padding: 1rem 1.5rem;
  border-radius: 20px;
  border: 1px solid rgba(255, 255, 255, 0.3);
  background: rgb(242 89 75 / 0.2);
  cursor: pointer;
  text-align: left;
  transition: background 0.2s;
}


.end-confirm-buttons {
  width: 100%; /* Erzwingt den Umbruch, da 100% Breite beansprucht werden */
  display: flex;
  gap: 0.5rem;
  margin-top: 0.5rem; /* Optional: Etwas Abstand nach oben zum Text */
}

.end-confirm-btn{
  flex: 1; /* Buttons teilen sich den Platz gleichmäßig auf */
  padding: 0.5rem;
  cursor: pointer;
  border-radius: 10px;
  border: 1px solid rgb(242 89 75 );
  background-color: rgb(242 89 75 / 0.8);
}
.option-btn:hover {
  background: rgb(139 0 165 / 0.5);
}

.option-btn.primary {
  background: rgba(255, 255, 255, 0.25);
  border-color: rgba(255, 255, 255, 0.5);
}

.option-icon {
  font-size: 1.6rem;
  flex-shrink: 0;
}

.option-text {
  display: flex;
  flex-direction: column;
  gap: 0.2rem;
  max-width: 85%;
}

.option-text strong {
  font-size: 1.05rem;
}

.option-text small {
  font-size: 0.85rem;
  opacity: 0.8;
}

/**/

.logo-box {
  width: calc(20vw - 2rem);
  height: 5rem;
  box-sizing: border-box;
  align-content: center;
  text-align: center;
  margin-top: 2rem;
  margin-bottom: 2rem;

  position: fixed;
  bottom: 0;
}

span.logo {
  font-size: calc((20vw - 2rem)/6.5);
  font-weight: bold;
  text-align: center;
}

.open-player {
  width: calc(20vw - 7rem);
  text-align: center;
  margin: 3rem 0 0 0;
  font-weight: bold;
}

.open-player-btn {
  border: none;
  height: 2.5rem;
  transition: all 0.3s ease-in-out;

  margin: 1rem 0 0 0;

  color: white;
  background-color: #8303A6;
  border-radius: 30px;
  width: calc(20vw - 15rem);
  font-weight: bold;
}

.open-player-btn:hover {
  transform: translateY(-0.2rem) scale(1.04);
  box-shadow: 0 0 0.5rem 1rem rgba(0, 0, 0, 0.01);
  font-weight: 1000;
  background-color: #C826B8;
}

.end-party-btn {
  border: none;
  height: 2.5rem;
  transition: all 0.3s ease-in-out;

  margin: 1rem 0 0 0;

  color: white;
  background-color: #F2594B;
  border-radius: 30px;
  width: calc(20vw - 15rem);
  font-weight: bold;
}

.end-party-btn:hover {
  transform: translateY(-0.2rem) scale(1.04);
  box-shadow: 0 0 0.5rem 1rem rgba(0, 0, 0, 0.01);
  font-weight: 1000;
  background-color: #d8455f;
}

